replace datetime from question to match
